--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "2.7" ]]; then sudo pip install --egg SCons; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "3.5" ]]; then sudo pip3 install --egg SCons; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi 
-  - if [[ "$TRAVIS_OS_NAME" == "osx" && "$PYTHON_VERSION" == "2.7" ]]; then brew upgrade python; fi 
-  - if [[ "$TRAVIS_OS_NAME" == "osx" && "$PYTHON_VERSION" == "2.7" ]]; then sudo /usr/local/bin/pip install --egg SCons; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" && "$PYTHON_VERSION" == "2.7" ]]; then sudo /usr//bin/pip install --egg SCons; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" && "$PYTHON_VERSION" == "3.5" ]]; then brew install python3; fi 
   - if [[ "$TRAVIS_OS_NAME" == "osx" && "$PYTHON_VERSION" == "3.5" ]]; then sudo /usr/local/bin/pip3 install --egg SCons; fi 
     
