--- a/.travis.yml
+++ b/.travis.yml
@@ -12,29 +12,34 @@ matrix:
       env: 
         - PYTHONCOM=python
         - PYTHON_VERSION=2.7
-    - os: osx
-      python: '3.5' 
-      env: 
-        - PYTHONCOM=python
-        - PYTHON_VERSION=3.5
-    - os: osx
-      python: '2.7'
-      env: 
-        - PYTHONCOM=python
-        - PYTHON_VERSION=2.7
       
-before_install:
+install:
+  - cd ${TRAVIS_BUILD_DIR}
+  # install latest LCOV (1.9 was failing for me) [1]
+  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+  - tar xf lcov_1.11.orig.tar.gz
+  - sudo make -C lcov-1.11/ install
+  # install lcov to coveralls conversion + upload tool
+  - gem install coveralls-lcov
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "3.5" ]]; then sudo add-apt-repository -y ppa:deadsnakes/ppa; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "3.5" ]]; then sudo apt-get update; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "3.5" ]]; then sudo apt-get -y install python3.5 python3-pip; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "2.7" ]]; then sudo apt-get -y install python-pip python-dev; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "2.7" ]]; then sudo pip install --egg SCons; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "3.5" ]]; then sudo pip3 install --egg SCons; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi 
-  - if [[ "$TRAVIS_OS_NAME" == "osx" && "$PYTHON_VERSION" == "2.7" ]]; then sudo easy_install pip; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" && "$PYTHON_VERSION" == "2.7" ]]; then sudo pip install --egg SCons; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" && "$PYTHON_VERSION" == "3.5" ]]; then brew install python3; fi 
-  - if [[ "$TRAVIS_OS_NAME" == "osx" && "$PYTHON_VERSION" == "3.5" ]]; then sudo /usr/local/bin/pip3 install --egg SCons; fi 
-    
-script: 
-  - scons
+
+before_script:
+  - cd ${TRAVIS_BUILD_DIR}
+  - lcov --directory . --zerocounters
+
+script:
+  - cd ${TRAVIS_BUILD_DIR}
+  - scons --cover
+  - ./infcover
+
+after_success:
+- cd ${TRAVIS_BUILD_DIR}
+- lcov --directory . --capture --output-file coverage.info # capture coverage info
+- lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info # filter out system and test code
+- lcov --list coverage.info # debug before upload
+- coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage.info # uploads to coveralls
