--- a/.travis.yml
+++ b/.travis.yml
@@ -21,12 +21,8 @@ install:
   - sudo make -C lcov-1.11/ install
   # install lcov to coveralls conversion + upload tool
   - gem install coveralls-lcov
-  - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "3.5" ]]; then sudo add-apt-repository -y ppa:deadsnakes/ppa; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "3.5" ]]; then sudo apt-get update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "3.5" ]]; then sudo apt-get -y install python3.5 python3-pip; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "2.7" ]]; then sudo apt-get -y install python-pip python-dev; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "2.7" ]]; then sudo pip install --egg SCons; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" && "$PYTHON_VERSION" == "3.5" ]]; then sudo pip3 install --egg SCons; fi
+  - python -m pip install -U --progress-bar off pip setuptools wheel
+  - python -m pip install -U --progress-bar scons
 
 before_script:
   - cd ${TRAVIS_BUILD_DIR}
