--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ install:
   - sudo make -C lcov-1.11/ install
   # install lcov to coveralls conversion + upload tool
   - gem install coveralls-lcov
-  - python -m pip install -U --progress-bar off pip setuptools wheel
-  - python -m pip install -U --progress-bar off scons
+  - python -m pip install -U pip setuptools wheel
+  - python -m pip install -U scons
 
 before_script:
   - cd ${TRAVIS_BUILD_DIR}
