--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,11 +1,13 @@
+image: Visual Studio 2019 
+
 install:
-  - python -m pip install -U --progress-bar off pip setuptools wheel
-  - python -m pip install -U --progress-bar off scons pypiwin32 colorama
+  - C:/Python37-x64/python.exe -m pip install -U --progress-bar off pip setuptools wheel
+  - C:/Python37-x64/python.exe -m pip install -U --progress-bar off scons pypiwin32 colorama
   - git submodule update --init --recursive
 
 build: off
 build_script:
-  - scons
-  - scons -c
+  - C:/Python37-x64/Scripts/scons.bat
+  - C:/Python37-x64/Scripts/scons.bat -c
   - git submodule foreach git pull origin master
-  - scons
+  - C:/Python37-x64/Scripts/scons.bat
