--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,5 +104,7 @@
         "cpus",
         "sconscript"
     ],
-    "cSpell.language": "en,en-US"
+    "cSpell.language": "en,en-US",
+    "files.trimTrailingWhitespace": true,
+    "python.pythonPath": "/usr/bin/python3.7"
 }
